[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "cryptography>=45.0.4",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "solana>=0.36.7",
    "solders>=0.26.0",
    "sqlalchemy>=2.0.41",
    "telethon>=1.40.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "redis>=6.2.0",
    "flask-session>=0.8.0",
    "pyserum>=0.5.0a0",
    "aiohttp>=3.12.13",
    "flask-socketio>=5.5.1",
    "flask-jwt-extended>=4.7.1",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
]
